<resources>
    <string name="app_name">vozon</string>
    <string name="upload_image">Загрузить фото</string>
    <string name="personal_information">ПЕРСОНАЛЬНЫЕ ДАННЫЕ</string>
    <string name="phone_number_">Номер телефона*</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="username_">Имя пользователя*</string>
    <string name="username">Имя пользователя</string>
    <string name="city">Город</string>
    <string name="next">Далее</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_xmain">XMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone_number">Номер телефона</string>
    <string name="login">ВОЙТИ</string>
    <string name="do_not_have_an_account">У вас нет аккаунта?</string>
    <string name="sign_up">Создать аккаунт</string>
    <string name="done">Готово</string>

    <string name="is_empty">%1$s не может быть пустым</string>

    <string name="_o_">%1$s ● %2$s</string>
    <string name="_s_">%1$s %2$s</string>
    <string name="meter">%1$.0fм</string>
    <string name="meter3">%1$.0f м³</string>
    <string name="kg">%1$.0f кг</string>
    <string name="g">%1$.0f гр</string>
    <string name="loading">Погрузка</string>
    <string name="price">Цена</string>
    <string name="filter">Filter</string>
    <string name="terms_of_service">Условия использования</string>
    <string name="terms_of_service_"><u>Условия использования</u></string>
    <string name="load_type">Вид погрузки</string>
    <string name="extra">Дополнительно</string>
    <string name="short_description">Краткое описание</string>
    <string name="registration">Регистрация</string>
    <string name="photo">Фото</string>
    <string name="enter_photo">Выберите фото</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_city">Выберите город</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="something_went_wrong">Что то пошло не так</string>
    <string name="enter_experience">Укажите стаж вождения</string>
    <string name="enter_sms">Введите код с СМС</string>
    <string name="ads">Объявления</string>
    <string name="orders">Заявки</string>
    <string name="type">Тип кузова</string>
    <string name="date_departure">дата отъезда</string>
    <string name="t_type">Тип транспорта</string>
    <string name="profile">Профиль</string>
    <string name="image">image</string>
    <string name="length_u">Длина(м)</string>
    <string name="width_u">Ширина(м)</string>
    <string name="height_u">Высота(м)</string>
    <string name="weight_u">Вес(кг)</string>
    <string name="receiver_info">Данные принимающего</string>
    <string name="price_for_service">Цена за услуги</string>
    <string name="enter_title">Выберите наименование</string>
    <string name="title">Наименование</string>
    <string name="enter_cargo">Опишите груз</string>
    <string name="enter_price">Укажите цену</string>
    <string name="enter_accept_person_contact">Укажите контактные данные</string>
    <string name="enter_accept_person">Укажите принимающее лицо</string>
    <string name="enter_date">Укажите дату</string>
    <string name="enter_time">Укажите время</string>
    <string name="enter_end_point">Выберите улицу отгрузки</string>
    <string name="enter_start_point">Выберите улицу погрузки</string>
    <string name="enter_mass">Укажите вес</string>
    <string name="enter_length">Введите длину</string>
    <string name="enter_width">Введите ширину</string>
    <string name="enter_height">Введите высоту</string>
    <string name="settings">Настройки</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="your_transports">Список вашего транспорта</string>
    <string name="enter_shipping_type">Выберите способы погрузки</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="enter_transport">Выберите транспорт</string>
    <string name="enter_payment_type">Выберите способы оплаты</string>
    <string name="enter_other_service">Выберите прочие условия</string>
    <string name="enter_comment">Введите комментарии</string>
    <string name="not_matter">Неизвестно</string>
    <string name="enter_t_type">Выберите тип транспорта</string>
    <string name="transport_position">Машина находится в</string>
    <string name="destination">Направление</string>
    <string name="have_loaders">Наличие грузчиков</string>
    <string name="delivered">Доставлено</string>
    <string name="add_transport">Добавить транспорт</string>
    <string name="mark">Марка</string>
    <string name="model">Модель</string>
    <string name="start_point">Погрузка</string>
    <string name="end_point">Отгрузка</string>
    <string name="payment_type">Способы оплаты</string>
    <string name="volume">Объем</string>
    <string name="position">Направления</string>
    <string name="mass">Вес</string>
    <string name="list_of_your_transport">Список вашего транспорта</string>
    <string name="other_service">Прочие условия</string>
    <string name="enter_address">Введите адрес</string>
</resources>
