<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/v_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user_placeholder"/>

        <Button
            android:id="@+id/v_upload_image"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space"
            android:background="@drawable/rounded_blue"
            android:paddingEnd="@dimen/space"
            android:paddingStart="@dimen/space"
            android:text="@string/upload_image"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingEnd="@dimen/space"
        android:paddingStart="@dimen/space"
        android:paddingTop="3dp"
        android:text="@string/personal_information"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/v_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:windowBackground"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/v_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <include
            layout="@layout/include_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/v_phone_number"
            style="@style/ProfileEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/phone_number_"
            android:inputType="textNoSuggestions|phone" />
    </LinearLayout>

    <include
        layout="@layout/include_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <EditText
        android:id="@+id/v_name"
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/male_"
        android:hint="@string/username_"
        android:inputType="textPersonName" />

    <include
        layout="@layout/include_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <EditText
        android:id="@+id/v_city"
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/next_"
        android:drawableStart="@drawable/compass_"
        android:focusable="false"
        android:hint="@string/city"
        android:inputType="text" />

    <include
        layout="@layout/include_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>