<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/v_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="5dp"
            app:srcCompat="@drawable/tmp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/v_transport"
                    style="@style/LargeTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    tools:text="Volkswagen Polo" />

                <TextView
                    android:id="@+id/v_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15, Mart"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/v_t_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="10sp"
                tools:text="Седан • Грузчики" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transport_position"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/v_start_point"
                style="@style/LargeTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                tools:text="Павлодар, Каза*стан" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/v_end_point"
                style="@style/LargeTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/not_matter"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/include_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>